<resources>
    <string name="app_name">MovieCollectionDB</string>
    <string name="genre_r">Жанр:</string>
    <string name="duration_r">Продолжительность:</string>
    <string name="rating_r">Оценка:</string>
    <string name="budget_r">Бюджет:</string>
    <string name="revenue_r">Сборы:</string>
    <string name="release_date_r">Дата премьеры:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snack_bar_reload">Reload</string>
    <string name="butto_send_text">SEND MESSAGE</string>
    <string name="menu_settings_string">Settings</string>
    <string name="menu_favorite_string">Favorite</string>
    <string name="menu_history_string">History</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="set_title_text">Настройки</string>
    <string name="settings_label_adult">Показывать фильмы 18+</string>
    <string name="note_label_text">Заметка к фильму:</string>
    <string name="save_note_button_text">Save</string>
    <string name="notes_menu_item">Notes</string>
    <string name="contacts_menu_item">Contacts</string>
    <string name="show_genres_text">Показывать жанры:</string>
    <string name="action_movie_box_text">Боевик</string>
    <string name="adventures_box_text">Приключения</string>
    <string name="cartoons_box_text">Мультфильмы</string>
    <string name="comedy_box_text">Комедии</string>
    <string name="criminal_box_text">Криминал</string>
    <string name="documentary_box_text">Документальный</string>
    <string name="drama_box_text">Драма</string>
    <string name="family__box_text">Семейный</string>
    <string name="fantasy_box_text">Фэнтези</string>
    <string name="history_box_text">История</string>
    <string name="horror_box_text">Ужасы</string>
    <string name="music_box_text">Музыка</string>
    <string name="detective_box_text">Детектив</string>
    <string name="melodrama_box_text">Мелодрама</string>
    <string name="fantastic_box_text">Фантастика</string>
    <string name="telefilm_box_text">Телевизионный фильм</string>
    <string name="thriller_box_text">Триллер</string>
    <string name="military_box_text">Военный</string>
    <string name="western_box_text">Вестерн</string>
    <!--Google API Key-->
    <string name="google_map_key" translatable="false">AIzaSyDioVBBRzK7vgdMzhUUza5zRHXmdfhs7G4</string>
    <string name="map_menu_item">Map</string>
    <string name="label_search_text">Поиск места рождения актёра.</string>
    <string name="input_actor_search_text">Введите имя или фамилию актёра</string>
    <string name="dialog_button_text_close">Close</string>
</resources>